[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signalgrid"
version = "1.0.0"
description = "Official Python client for Signalgrid push-notification API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Signalgrid", email = "support@signalgrid.co" }
]